# solve_qp

./: .gitignore  CMakeLists.txt  main.cpp
include/: bootstrap.hpp  csv_utils.hpp  decomposeQP.hpp  findSigExposures.hpp  fit.hpp  solve_qp.hpp
src/: bootstrap.cpp  csv_utils.cpp  decomposeQP.cpp  findSigExposures.cpp  fit.cpp  solve_qp.cpp
